# ChangeLog for media-libs/liblqr
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/liblqr/ChangeLog,v 1.22 2013/11/15 12:16:10 pinkbyte Exp $

  15 Nov 2013; Sergey Popov <pinkbyte@gentoo.org> liblqr-0.4.2-r1.ebuild:
  Stable on amd64 and x86, wrt bug #485672

*liblqr-0.4.2-r1 (15 Nov 2013)

  15 Nov 2013; Sergey Popov <pinkbyte@gentoo.org> -liblqr-0.4.2.ebuild,
  +liblqr-0.4.2-r1.ebuild:
  Revision bump: add epatch_user, prune unnecessary libtool files

  15 Nov 2013; Sergey Popov <pinkbyte@gentoo.org> liblqr-0.4.1.ebuild,
  liblqr-0.4.2.ebuild:
  Correct dependency on dev-libs/glib

  24 Apr 2013; Markos Chandras <hwoarang@gentoo.org> liblqr-0.4.2.ebuild:
  Drop doc useflag because man pages are not included in the tarball anymore.
  Bug #464040

*liblqr-0.4.2 (31 Mar 2013)

  31 Mar 2013; Markos Chandras <hwoarang@gentoo.org> +liblqr-0.4.2.ebuild:
  Version bump

  09 May 2012; Alexis Ballier <aballier@gentoo.org> liblqr-0.4.1.ebuild:
  keyword ~amd64-fbsd

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> liblqr-0.4.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  04 Dec 2011; Markos Chandras <hwoarang@gentoo.org> liblqr-0.4.1.ebuild:
  add missing pkgconfig build time dependency. Bug #391983 thanks to David Owen

  10 Dec 2009; Raúl Porcel <armin76@gentoo.org> liblqr-0.4.1.ebuild:
  arm stable wrt #284425

  09 Dec 2009; Brent Baude <ranger@gentoo.org> liblqr-0.4.1.ebuild:
  Marking liblqr-0.4.1 ppc64 for bug 284425

  08 Dec 2009; nixnut <nixnut@gentoo.org> liblqr-0.4.1.ebuild:
  ppc stable #291696

  03 Dec 2009; Markus Meier <maekke@gentoo.org> liblqr-0.4.1.ebuild:
  amd64 stable, bug #284425

  24 Nov 2009; Christian Faulhammer <fauli@gentoo.org> liblqr-0.4.1.ebuild:
  stable x86, bug 284425

  22 Nov 2009; Tobias Klausmann <klausman@gentoo.org> liblqr-0.4.1.ebuild:
  Stable on alpha, bug #284425

  21 Nov 2009; Jeroen Roovers <jer@gentoo.org> liblqr-0.4.1.ebuild: