@@ -4,17 +4,13 @@ Hash: SHA256
 DIST liblqr-1-0.4.1.tar.bz2 347474 SHA256 9fda316804a4fa0a07184483a4b488611963340610615ea9cc25f6f31407e909 SHA512 1f923a1745c30c3e8033602882bbab4160464192646779b5a7c1adff80253f21e6f4e2a516ad3cee061d5c62fb57c606691fb2ed3d9033c3c610e8ed3a6f6c66 WHIRLPOOL 4af2bdead78f68557c3601e94e91088e2fabc712c97e2b24fa9f1a152a909b006e3c081b3d643cac4d52d386edeeeff91f5ff12099f72a678c94c03c726fcbf0
 DIST liblqr-1-0.4.2.tar.bz2 344739 SHA256 173a822efd207d72cda7d7f4e951c5000f31b10209366ff7f0f5972f7f9ff137 SHA512 57d9ed67d5a11c970262263a34b6797576088e14f2ccb01b393eff55bfd22c8bb2b2189e3ed5ff6c187f709c556225fc1fb1038bd0d7e0c03d8839ef0ce998a3 WHIRLPOOL 439720dcbc6b19e49d57151bc8c60392da3ceeb31a6edfaee0c2bb3f9bba89a3a89903f79b06a5f5f2a19377d5548506bcefa3d9b5497d651672c03c86d71cb6
 EBUILD liblqr-0.4.1.ebuild 827 SHA256 d3bbd6f56c9df548529811baefc371c9a55483616481e947aec66f60a94cb45c SHA512 6d0e165b383091198aca77b36e504be83e05588e4c28b9e2a0582b6875b823b34ff20197fe07afa19236c2ce15a69586e4dfc7898f7c86fade4a2c92c106a4cc WHIRLPOOL 162eabfe66c9f2fa77cc948c0b7709680e2851b013203c7c1fbdded6413181bd048f5c30e1a6ab59290a08d01e89a3dd3327e6ff2239f5ab793addef31c9e7d7
-EBUILD liblqr-0.4.2-r1.ebuild 723 SHA256 4106a435e25dd2865e79eea3d643c82f30254e704f3ce18232bb14650e793ce6 SHA512 35c5c20cea4e04db984647602f52e0e1a703a72daccaabf882683d6fc9a4fd78ea2a5762672a61235de9fbacf7ac292823f86b528676823cb4438f751fb80da6 WHIRLPOOL 345dd6f4cca773543d6bc0f5c544cc2ddba39c90a189114341eb1dd0d903b5eb683bc6550bc852d730db31821cd88cb5b3a3b12379df39b7a0829da672d302c2
-MISC ChangeLog 2888 SHA256 f02ee0457b6704ad12c88a064806ad7a6aa99c85375e05f3f0d200ec15002430 SHA512 2fcb1f8444c2ba7cf01ddba38ddc4cd748561b3b8c4d72e3c9acd85949c78f39ef60cc97aafa054feac2d499ebd86de579f9b50720fb4c01ab77db07f27e7a06 WHIRLPOOL 352bdca04471cb77a10cb5e2768ce22f0d06887e41f6e594faed891f695c6935f3041b15dde985d3bdd77994757f5d19087bd0d7e3c956af84b04559668e49c7
+EBUILD liblqr-0.4.2-r1.ebuild 717 SHA256 d98af39bb76e27f84d57ba08f8451007605f51de7f1882b3a5c567b983a1d419 SHA512 d529a8144ac2000e0034c0f12a9a52cff7829890aff6aa9c33de61b58e2c2251a7feda5f7049e70b392b4bb578f8ab41a67396c0fca19b80dc96228af181211d WHIRLPOOL 95fa7751967e7f35e2548a13c238e904fcac5133079edc8786887955a59f996335f95d9ccd5c9629be109d275dfe907bc6ae68116c0826d68c3e9533b496a926
+MISC ChangeLog 2988 SHA256 006f88634f67543dd213bf91f2d92d3bdfc5db454d7fce3a80b76e739029fc64 SHA512 9979e01d4fc96108a14ff61018733cc0188d45e17543d91b53cc7532ca78f6747228bce578d0a8d6a4b17b9092cc8f4c3e72b9d1f38871ebdcc30b42fa5a579c WHIRLPOOL 5f5d3be5a86ffbf5572936518baa42683fde231370124ae610da26c2c7296413ac7f3d7b620ae3f2cbfa954de6ea214a97e37daf8c5261e9d49bee5b581eb3c6
 MISC metadata.xml 230 SHA256 9a2917aa97989e26a15d548bdf64890dcc69ae9d3df8142b2aae27530aee063b SHA512 8d6c4ff1bc83838672a976af75f113734849b5ce1b85357b41172f430b7a8ac04e0637d0aa9613fe8ac1464f5dd34d119c77a7c916de5a97a37c36c3d117cc91 WHIRLPOOL be59a0362b554a50082406aae917f612b8b13262a355dbd39c6c2f55867f535804e9dc1d4a2341e820b49434c45ff08a8dccde13ec9a18f4fbcc8b1c387b2558
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJShhBuAAoJECo/aRed92670TkIALbaSwyy87cwNGLz2qbwzf1W
-5MXQ+ppicFxb6qPc5ILwhgrSokFp53j+LWiW4pdw2wjxRSlsnqANBbwhd/ty9TGG
-ueM/oqyuu9cUspI43/hmbnOJkiiyKQFDFRFAZI38A+jOS5pj7QydmmMuLo3g/7NH
-5wQR80jMifILWR2tSucN/RGXqDPXqerDnHdTQ/JLffE9qb2YJOi9p+TDS3h2GStG
-Wb7eEZc5Mv/HovKo61qYqPhk05S+ZO0+Rmra2zhLq2OGzmR0IxWjVZblsZN86pxr
-kxxle1BpBFBM6EYYwEpK7QBYoozcMXjOTc7Yb+ZyjVS2irldHYircZOWHhCj/vY=
-=tnrr
+iEYEAREIAAYFAlKGOo8ACgkQVWmRsqeSphNhigCfdrL9bDen4yOL/gYUbikq8bGq
+lqIAn0U1cErlZZbGy69SZ/HdPN3duWCi
+=8QQc
 -----END PGP SIGNATURE-----
