@@ -3,10 +3,10 @@ DEPEND=dev-libs/glib:2 virtual/pkgconfig
 DESCRIPTION=An easy to use C/C++ seam carving library
 EAPI=5
 HOMEPAGE=http://liblqr.wikidot.com/
-KEYWORDS=~alpha amd64 ~arm ~hppa ~ppc ~ppc64 x86 ~amd64-fbsd ~x86-fbsd
+KEYWORDS=~alpha amd64 ~arm hppa ~ppc ~ppc64 x86 ~amd64-fbsd ~x86-fbsd
 LICENSE=|| ( GPL-3 LGPL-3 )
 RDEPEND=dev-libs/glib:2
 SLOT=0
 SRC_URI=http://liblqr.wikidot.com/local--files/en:download-page/liblqr-1-0.4.2.tar.bz2
 _eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=6314c2aa3eb223a744ef9914a2c53375
+_md5_=5dc940cd1f16b6bac3e64b1083235bb9
