@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST xterm-285.tgz 1101536 SHA256 5360d66871bde7c8cde934da8fec8abd70f5ee365f5cc911298a87cb797eb38b SHA512 db03dabf2e82d4125f6228da3a56dfd434a8240e26aad094568206b722da40a45500df590db2379e1508adbf8a6766ac68e0719086b9730ccdfce9fe8a058978 WHIRLPOOL c255f0c6759452db4acc695ba8ee26b8e5a342506c7fdec28ed4d47cb6b95ed84b027c97bab01c391a05e5d84d2c7b33f36072d700e2089a15a72e3103de4914
 DIST xterm-288.tgz 1086474 SHA256 aaa1d9fab8da3010dced60b4fd41be5ec27c37ea5d5a0c1d5d8693b51ee75533 SHA512 8a4095c2e99175159618098439b3376cf76b6e5d3fa3d97e94fcee848fbf605bfbc4036cafbcd19ee6a896a9fef8df81befef95588898e426614ec17fe8455e9 WHIRLPOOL f4388db2d9396dc0281eb10557bd4f53184f1e3b194fc944458a62ccd3bb6e3588243606fe37ce43c00144d5af4474c648e475715caf38911ab94ac74051a934
@@ -11,22 +11,12 @@ EBUILD xterm-288.ebuild 2626 SHA256 088dc71a8f9260938f0756a1136d0471dfab1dba3c2f
 EBUILD xterm-292.ebuild 2662 SHA256 d1368071cd64352f2f07af5bf3e9582e7229cdd4418d53dec55fda146e86f6c3 SHA512 1a78a13fad17a226246a662161adc79ab90fe9bdede304b047bd992da69a714c90a065972b3670870da2de5cfeb58b425d67b38c05c497bf9cea3fef65858a82 WHIRLPOOL 94ecb666e883d8617c22e6483744f8d5d89637a34be836e80210928aa43a8f5ddd19e258162312f397d5d5561a11ac41bb848067758b24e13830a7546ebe9660
 EBUILD xterm-293.ebuild 2662 SHA256 77fc02aefcf7a237d8685887a7d2a9d6aa19b17c7fb55412a48c8222351f21f2 SHA512 e346a704f38535beff35358de16af4f711a3aeba04e136aa279216548404b44a4566d5167502bddebb960493c660ae2c07d7325d0404fba329d3c2cf3e659593 WHIRLPOOL c7d1c21b9992f292acbe7dd07ec129a0f3f771c14c58362406ea97bb3ab72abe6aae657da5ae3777c0bea1d1e1e52e84032ce4b7f6c5f9d7eff918f777cd1787
 EBUILD xterm-297.ebuild 2649 SHA256 dcecc6283a6e310e97c72f9aeb17517f0a13bf17993815794907c9fbf89a3dd4 SHA512 e4380aceff8fc61f0d8e04f1e740404c4194af40f95336fe76453a35799462fd0de89681f7e906d7ff1c7b358adb42196b0bfc260f53b32c456f84a38ee97de6 WHIRLPOOL bef13b5f1c072698616bf5efc41b2c156a2b92d54d014a87afc7cb177a80f5835dd17dcb3f8994aec32d69d5db663028148e2458de298067ff7696af4158d744
-MISC ChangeLog 49858 SHA256 f98a07966662ae31a0538d4d2167feb36bae36e89131de75a59ab1eca4b66095 SHA512 440f2c3ee4bcb191d732616245c2167d60887f8484e542f2a79f6ad21a2d6861f73c9de7da5d108d4174901548422695dd9a11968b3f5d0031bacab52288c127 WHIRLPOOL 19f3c27f200d09cb2020e62d833ef2264ecc046f203a5085273486e7ef10e3c06706959a9cd9709aff2e8810154471df3c9a741f20345820dc4ec7d916e76ee6
-MISC metadata.xml 453 SHA256 0c23ce5df493c39016bf125cd470e995ad089fd5aeaf3effeaa8a29638a92993 SHA512 b09eb4a1e1400183671285fbc7bb9962e19b91e7081e00464cd1a7f79e990eaf2eeccb96c18e4c7b1591e027455598cbc70649eb4d4c0b00240a2bcff8e1b939 WHIRLPOOL 2630e761eae484e8832c8fe319e56a1f0565f8090ecd6e5cbc9a06e08b925630c4c230f16547523fbd2f49f8e06a18d854d235409f2e9269faee5c28ef8cb97f
+MISC ChangeLog 49942 SHA256 4626953bb1b11a28dca701f6099003f70bc2c12277d768dbc2571cb0775f81dc SHA512 fb9a9ed9462c7bcca576f071d4c74bc9a2b2993dd894d50f706c0977ffd8f007c989c4cc37b4d5c9838033c4fa38a277f893bfce3528015c7f9407fe9fc525e4 WHIRLPOOL fedcddd819dc6514ea4655c5bd8e8660be132460a0d0e0016513b37f3e92d3402705d109a77d634f51d1befb16d2eb755e92fe399f745db8d500884a579e7a36
+MISC metadata.xml 464 SHA256 92d68cc1d411eab742a450db017acdcbfe90f6e836a47e098eedd1411c14f19d SHA512 9f09492bd60e4925a2212075b2c102290a01ae93d1568700c3e910110bf8b4f2bb1263244e1ff98dace051cd18eb359fdc28460d97e2d6eaa680f39e4dd26186 WHIRLPOOL 15ce77b3054e439047368c1609bc63e658536b3d6e3159847ed9ac64dce2845422fee14b22a06c1327d06e3c722ca779218fc02d6ea6feba7bee97ec1ef4e5de
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCgAGBQJSU5OyAAoJELp701BxlEWfufEP/0kVjo8c0PqHeg/rKW+LDpcy
-bqHbbe+W6kliHE8CNerPmMxpGJmFwlo5Tv8pJh3y7m7Fw64j+NqVzD1/IP0Sd+FO
-4PorrdmMBVYcRtG6WnZN2ZuSQMPy/qYmcFqfofytbNj+yxxDvXOOFpyylKmeLNLC
-4TOWJVcvt5fFZFuo4rVcrlkgf2PKqt9Rsk1zIEv32rmKaDLTg67eEqTU4hBOdc0r
-IVQ58TIUoNrODvWjflF3RoVowqV/qfoAB1BY82SNBcCAfCkuMRpLMXVqppaMJMLs
-xiHb16RIDN06wMbayiwcNz3xTsMp+CgQ7iVtl9SgYrkO4/MZtxRUWqqli8oUb47I
-P0lsSnmdoNcOEnSCuhIa5ADWXnapLKuySeUb6quk+NVTtNpcQK9lPO+72fml/J23
-s7brhtisoHi3qR/osna29tn/VFvGg6qvUWjner5pCAWQKEdcP2kiwx7Cj6asczXV
-eRFUKAGfaXM8ms/1uv1o8NEFoRrNEcMsb7OOK8Ejv6XqpMLE6YY4lz7X/dYme2Oh
-4IE0mQWfxNgjXZm4VMt0IOkf+BoJ1KeELp3Ico7I5aLhT5blqJ9yDdfFFhXx+1nz
-PoUB4bWsdXLXsW78/+Aud919fcLOS9N/O28/Hib/xihlCpuuvPQWL2vfMcXz6rJB
-uNveZ/M81w+tQHaOvErg
-=kYI+
+iEYEAREIAAYFAlKGOOcACgkQVWmRsqeSphO8OACfWFedN5YYzPQhOfqamr3T4X4s
+pqkAnA+jRp5EetoXKaM3mdpygAvz1m2z
+=iZV8
 -----END PGP SIGNATURE-----
