@@ -1,6 +1,9 @@
 # ChangeLog for x11-terms/xterm
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-terms/xterm/ChangeLog,v 1.394 2013/10/08 05:10:14 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-terms/xterm/ChangeLog,v 1.395 2013/11/15 15:08:22 jer Exp $
+
+  15 Nov 2013; Jeroen Roovers <jer@gentoo.org> metadata.xml:
+  Fix e-mail address.
 
   08 Oct 2013; Agostino Sarubbo <ago@gentoo.org> xterm-297.ebuild:
   Stable for x86, wrt bug #475480
